fixed the section-4 margins on mobile, final version

--- a/styles/style.css
+++ b/styles/style.css
@@ -407,6 +407,10 @@ input {
         width: 100%;
     }
 
+    .section-4 .subsection {
+        margin-left: 0;
+    }
+
     .section-4 button {
         margin-bottom: 10%;
     }
